// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverrideSetsInputSelector  should render Artifact and value not array 1`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
        style="width: 350px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
          >
            <span>
              singleValue
            </span>
            <button
              class="clearButton"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
        <span
          class="bp3-icon bp3-icon-caret-down StyledProps--main"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`OverrideSetsInputSelector  should render Artifact context 1`] = `
<div
  class="bp3-popover-content"
>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main popoverContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="TextInput--main"
      >
        <div
          class="bp3-input-group search"
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main"
            icon="search"
          >
            <svg
              data-icon="search"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input"
            placeholder="overrideSet.searchInputSet"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
      >
        <input
          checked=""
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        overrideSet.selectMultipleInputSets
      </label>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--background-grey200 StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-small"
    >
      <span
        class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--color StyledProps--color-primary4"
        icon="info-sign"
      >
        <svg
          data-icon="info-sign"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            info-sign
          </desc>
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
      >
        overrideSet.helpTextForMultiSelect
      </p>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-small StyledProps--flex StyledProps--flex-distribution-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
        >
          overrideSet.inputSet
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
        >
          overrideSet.order
        </p>
      </div>
      <ul
        class="bp3-menu list multiple"
      >
        <li
          class="item"
          draggable="true"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                checked=""
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  data-icon="yaml-builder-input-sets"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                    >
                      <path
                        d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                      />
                      <path
                        d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                      />
                    </g>
                  </svg>
                </span>
                demo
              </p>
            </label>
            <span
              class="order"
            >
              <p
                class="StyledProps--font StyledProps--main orderText"
              >
                1
              </p>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-reorder"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 0c-.1 0-.2 0-.3.1L4.1 1.6c-.2.2-.1.6.3.6h3.2c.4 0 .5-.4.3-.6L6.3.1C6.2 0 6.1 0 6 0zM.7 3.4c-.2 0-.5.1-.6.3s-.1.5 0 .6c.1.2.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3zm0 2.5c-.3 0-.5.1-.6.3s-.1.4 0 .6.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3zm0 2.4c-.2 0-.5.1-.6.3s-.1.5 0 .7.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3H.7zm3.7 2.5c-.4 0-.5.4-.3.6l1.5 1.4c.2.2.5.2.7 0l1.5-1.4c.2-.2.1-.6-.3-.6z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
        <li
          class="item"
          draggable="true"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                checked=""
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  data-icon="yaml-builder-input-sets"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                    >
                      <path
                        d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                      />
                      <path
                        d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                      />
                    </g>
                  </svg>
                </span>
                demo1
              </p>
            </label>
            <span
              class="order"
            >
              <p
                class="StyledProps--font StyledProps--main orderText"
              >
                2
              </p>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-reorder"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 0c-.1 0-.2 0-.3.1L4.1 1.6c-.2.2-.1.6.3.6h3.2c.4 0 .5-.4.3-.6L6.3.1C6.2 0 6.1 0 6 0zM.7 3.4c-.2 0-.5.1-.6.3s-.1.5 0 .6c.1.2.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3zm0 2.5c-.3 0-.5.1-.6.3s-.1.4 0 .6.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3zm0 2.4c-.2 0-.5.1-.6.3s-.1.5 0 .7.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3H.7zm3.7 2.5c-.4 0-.5.4-.3.6l1.5 1.4c.2.2.5.2.7 0l1.5-1.4c.2-.2.1-.6-.3-.6z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  data-icon="yaml-builder-input-sets"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                    >
                      <path
                        d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                      />
                      <path
                        d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                      />
                    </g>
                  </svg>
                </span>
                overrideSetIdentifier
              </p>
            </label>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`OverrideSetsInputSelector  should render Artifact context 2`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target bp3-popover-open"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container bp3-active Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
        style="width: 350px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal tag"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo
              </span>
            </span>
          </span>
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal tag"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo1
              </span>
            </span>
          </span>
        </span>
        <span
          class="bp3-icon bp3-icon-caret-down StyledProps--main"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`OverrideSetsInputSelector  should render Artifact no value 1`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
        style="width: 350px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="placeholder"
          >
            overrideSet.placeholder
          </span>
        </span>
        <span
          class="bp3-icon bp3-icon-caret-down StyledProps--main"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`OverrideSetsInputSelector  should render Manifest context 1`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
        style="width: 350px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal tag"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo
              </span>
            </span>
          </span>
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal tag"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo1
              </span>
            </span>
          </span>
        </span>
        <span
          class="bp3-icon bp3-icon-caret-down StyledProps--main"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`OverrideSetsInputSelector  should render Variables context 1`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
        style="width: 350px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal tag"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo
              </span>
            </span>
          </span>
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal tag"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo1
              </span>
            </span>
          </span>
        </span>
        <span
          class="bp3-icon bp3-icon-caret-down StyledProps--main"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</div>
`;
